Fix subheading cut off issue on mobile

--- a/style.css
+++ b/style.css
@@ -60,9 +60,9 @@
 }
   
   .typewriter { 
-  width: 100%;
-  overflow: hidden;
+  display: inline-block;
   white-space: nowrap;
+  overflow: auto;
   border-right: 2px solid var(--primary-color);
   animation: typing 3s steps(30, end), blink 0.8s step-end infinite;
   font-size: 1.1rem;
